--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -41,9 +41,11 @@
 			</div>
 			<div class="code">
 				<p>
-<pre>$('#zoom li').imagezoom({
+<pre>
+$('#zoom li').imagezoom({
 	'hoverEvent':true
-});</pre>
+});
+</pre>
 				</p>
 			</div>
 			<script type="text/javascript">
@@ -56,7 +58,7 @@
 					<h1>调用方法：</h1>
 					<p>$(selector).slider(options);</p>
 				</div>
-				<h2> options参数</h2>
+				<h2>options参数</h2>
 				<table>
 					<thead>
 						<tr>
