--- a/index.html
+++ b/index.html
@@ -135,63 +135,63 @@
 					<div class="mod-content">
 						<ul>
 							<li>
-								<p><a class="hot" href="/widget/jquery-slider/" target="_blank">轮播</a><p>
+								<p><a class="hot" href="/jquery-slider/" target="_blank">轮播</a><p>
 								<p>$(selector).slider(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-tabs/" target="_blank">标签页</a></p>
+								<p><a href="/jquery-tabs/" target="_blank">标签页</a></p>
 								<p>$(selector).tabs(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></p>
+								<p><a href="/jquery-scrollbar/" target="_blank">滚动条</a></p>
 								<p>$(selector).scrollbar(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-select/" target="_blank">下拉框</a></p>
+								<p><a href="/jquery-select/" target="_blank">下拉框</a></p>
 								<p>$(selector).select(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-range/" target="_blank">滑动条</a></p>
+								<p><a href="/jquery-range/" target="_blank">滑动条</a></p>
 								<p>$(selector).range(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-dialog/" target="_blank">对话框</a></p>
+								<p><a href="/jquery-dialog/" target="_blank">对话框</a></p>
 								<p>$(selector).dialog(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></p>
+								<p><a href="/jquery-countdown/" target="_blank">倒计时</a></p>
 								<p>$(selector).countdown(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></p>
+								<p><a href="/jquery-imagezoom/" target="_blank">图片聚焦</a></p>
 								<p>$(selector).imagezoom(options);</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></p>
+								<p><a href="/jquery-headroom/" target="_blank">浮动菜单</a></p>
 								<p>$(selector).headroom(options);</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-calendar/" target="_blank">日历</a></p>
+								<p><a href="/jquery-calendar/" target="_blank">日历</a></p>
 								<p>$(selector).calendar(options);</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-popup/" target="_blank">弹出层</a></p>
+								<p><a href="/jquery-popup/" target="_blank">弹出层</a></p>
 								<p>$(selector).popup(options);</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></p>
+								<p><a href="/jquery-suggestion/" target="_blank">搜索建议</a></p>
 								<p>$(selector).suggestion(options);</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-citys/" target="_blank">城市三级联动</a></p>
+								<p><a href="/jquery-citys/" target="_blank">城市三级联动</a></p>
 								<p>$(selector).citys(options);</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
+								<p><a href="/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
 								<p>$(selector).inputFormat(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
+								<p><a href="/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
 							</li>
 						</ul>
