--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
+					<p>Copyright &copy; <span>jquerywidget.com</span></p>
 				</div>
 			</footer>
 		</div>
