--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>滑动日历(基于轮播)-calendar</title>
-		<link rel="shortcut icon" href="/public/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			.calendar{
 				width:350px;
@@ -70,9 +70,9 @@
 				width:100%;
 			}
 		</style>
-		<script type="text/javascript" src="../public/jquery.min.js"></script>
-		<script type="text/javascript" src="../code/jquery.slider.js"></script>
-		<script type="text/javascript" src="../code/jquery.slider-calendar.js"></script>
+		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
+		<script type="text/javascript" src="/code/jquery.slider.js"></script>
+		<script type="text/javascript" src="/code/jquery.slider-calendar.js"></script>
 	</head>
 	<body>
 		<div class="main">
