--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>日历-calendar</title>
-		<link rel="shortcut icon" href="/public/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			.calendar{
 				width:350px;
@@ -64,8 +64,8 @@
 				border-radius: 30px;
 			}
 		</style>
-		<script type="text/javascript" src="../public/jquery.min.js"></script>
-		<script type="text/javascript" src="../code/jquery.calendar.js"></script>
+		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
+		<script type="text/javascript" src="/code/jquery.calendar.js"></script>
 	</head>
 	<body>
 		<div class="main">
