--- a/jquery-inputFormat/index.html
+++ b/jquery-inputFormat/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>格式化输入框 - inputFormat</title>
-		<link rel="shortcut icon" href="/public/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			.input{
 				margin-bottom: 25px;
 			}
 		</style>
-		<script type="text/javascript" src="../public/jquery.min.js"></script>
-		<script type="text/javascript" src="../code/jquery.inputFormat.js"></script>
+		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
+		<script type="text/javascript" src="/code/jquery.inputFormat.js"></script>
 	</head>
 	<body>
 		<div class="main">
