--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>轮播-silder</title>
-		<link rel="shortcut icon" href="/public/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			.slider{
 				position: relative;
@@ -78,8 +78,8 @@
 				background:#fff;
 			}
 		</style>
-		<script type="text/javascript" src="../public/jquery.min.js"></script>
-		<script type="text/javascript" src="../code/jquery.slider.js"></script>
+		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
+		<script type="text/javascript" src="/code/jquery.slider.js"></script>
 	</head>
 	<body>
 		<div class="main">
