--- a/jquery-slider/subject.html
+++ b/jquery-slider/subject.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>全屏滚动</title>
-		<link rel="shortcut icon" href="/public/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			html,body{
 				height:100%;
@@ -113,8 +114,8 @@
 		}
 	}
 		</style>
-		<script type="text/javascript" src="../public/jquery.min.js"></script>
-		<script type="text/javascript" src="../code/jquery.slider.js"></script>
+		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
+		<script type="text/javascript" src="/code/jquery.slider.js"></script>
 	</head>
 	<body>
 		<div class="slider">
