--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>标签页-tabs</title>
-		<link rel="shortcut icon" href="/public/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			a{
 				color:#333;
@@ -96,8 +96,8 @@
 				right:0;
 			}
 		</style>
-		<script type="text/javascript" src="../public/jquery.min.js"></script>
-		<script type="text/javascript" src="../code/jquery.tabs.js"></script>
+		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
+		<script type="text/javascript" src="/code/jquery.tabs.js"></script>
 	</head>
 	<body>
 		<div class="main">
