--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -456,6 +456,10 @@
 							<td>获取当前帧</td>
 						</tr>
 						<tr>
+							<td>getSize()</td>
+							<td>获取帧数</td>
+						</tr>
+						<tr>
 							<td>getOptions()</td>
 							<td>获取组件当前参数值</td>
 						</tr>
