--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -255,7 +255,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>select(value)</td>
+							<td>setIndex(value)</td>
 							<td>切换标签页</td>
 						</tr>
 						<tr>
@@ -265,6 +265,14 @@
 						<tr>
 							<td>start()</td>
 							<td>开始自动播放</td>
+						</tr>
+						<tr>
+							<td>getIndex()</td>
+							<td>获取当前帧</td>
+						</tr>
+						<tr>
+							<td>getSize()</td>
+							<td>获取帧数</td>
 						</tr>
 					</tbody>
 				</table>
