--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -13,6 +13,9 @@
 			.citys p{
 				line-height: 28px;
 			}
+			table a{
+				color: #369;
+			}
 		</style>
 		<script type="text/javascript" src="/public/script/jquery.min.js"></script>
 		<script type="text/javascript" src="/code/jquery.citys.js"></script>
