--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -76,7 +76,7 @@ $('#demo2').citys({
       <p id="place">&nbsp;</p>
     </div>
     <div class="code">
-      <p>全国行政区划四级(省、市、区、街道)联动：</p>
+      <p>扩展成全国行政区划四级联动(省、市、区、街道)：</p>
 <pre>
 var $town = $('#demo3 select[name="town"]');
 var townFormat = function(info){
