--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -154,7 +154,10 @@ $('#demo3').citys({
           <tr>
             <td>dataUrl</td>
             <td>[数据库地址]</td>
-            <td>数据库获取 (<a href="http://passer-by.com/data_location/list.json" target="_blank">最新数据:2016年7月</a>)</td>
+            <td>
+              <p>数据库获取：<a href="http://passer-by.com/data_location/list.json" target="_blank">最新数据（2016年7月）</a></p>
+              <p>数据库项目：<a href="https://github.com/mumuy/data_location" target="_blank">中国行政区划（省、市、区、街道）</a></p>
+            </td>
           </tr>
           <tr>
             <td>provinceField</td>
