--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -91,7 +91,7 @@ $('#demo2').citys({
                 <p id="place">&nbsp;</p>
             </div>
             <div class="code">
-              <p>扩展显示街道信息：</p>
+              <p>扩展显示行政区划第四级(街道)信息：</p>
 <pre>
     var $town = $('#demo3 select[name="town"]');
     var townFormat = function(info){
