--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -217,7 +217,7 @@ $('#demo2').citys({
                         <tr>
                             <td>nodata</td>
                             <td>'hidden'</td>
-                            <td>当无数据时的表现形式</td>
+                            <td>当无数据时的表现形式:'hidden'隐藏,'disabled'禁用</td>
                         </tr>
                         <tr>
                             <td>onChange</td>
