--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -243,5 +243,8 @@ $('#demo2').citys({
                 </table>
             </div>
         </div>
+        <div style="display: none;">
+            <script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+        </div>
     </body>
 </html>
