--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -116,5 +116,8 @@
 				</table>
 			</div>
 		</div>
+		<div style="display: none;">
+			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+		</div>
 	</body>
 </html>
