--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -179,5 +179,8 @@ $('#range2').range({
 				</table>
 			</div>
 		</div>
+		<div style="display: none;">
+			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+		</div>
 	</body>
 <html>
