--- a/index.html
+++ b/index.html
@@ -191,5 +191,8 @@
 			</footer>
 		</div>
 		<script async defer src="https://buttons.github.io/buttons.js"></script>
+		<div style="display: none;">
+			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+		</div>
 	</body>
 </html>
