--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -112,5 +112,8 @@ $('#zoom li').imagezoom({
 				</table>
 			</div>
 		</div>
+		<div style="display: none;">
+			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+		</div>
 	</body>
 </html>
