--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 				</div>
 				<div class="mod-list">
 					<ul>
+						<li><a class="btn" href="http://passer-by.com/" target="_blank">个人网站</a></li>
 						<li><a class="btn" href="https://github.com/mumuy/widget" target="_blank">查看GitHub</a></li>
 						<li><a class="btn" href="https://github.com/mumuy/widget/zipball/master" target="_blank">下载 .zip</a></li>
-						<li><a class="btn" href="https://github.com/mumuy/widget/tarball/master" target="_blank">下载 .tar.gz</a></li>
 					</ul>
 				</div>
 				<div class="mod-botton">
