--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -148,6 +148,13 @@
 							</td>
 							<td>打开窗口前事件处理</td>
 						</tr>
+						<tr>
+							<td>afterClose</td>
+							<td>
+								function(){}
+							</td>
+							<td>关闭窗口后事件处理</td>
+						</tr>
 					</tbody>
 				</table>
 				<h2>callback(api)参数</h2>
