--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -14,6 +14,7 @@
                 line-height: 28px;
             }
             table a{
+                margin-right: 8px;
                 color: #369;
             }
         </style>
@@ -170,9 +171,14 @@ $('#demo2').citys({
                             <td>dataUrl</td>
                             <td>[数据库地址]</td>
                             <td>
-                              <p>数据库获取：<a href="http://passer-by.com/data_location/list.json" target="_blank">最新数据（2016年7月）</a></p>
+                              <p>最新数据库（2016年7月）：<a href="http://passer-by.com/data_location/list.json" target="_blank">JSON格式</a><a href="http://passer-by.com/data_location/list.jsonp" target="_blank">JSONP格式</a></p>
                               <p>数据库项目：<a href="https://github.com/mumuy/data_location" target="_blank">中国行政区划（省、市、区、街道）</a></p>
                             </td>
+                        </tr>
+                        <tr>
+                            <td>dataType</td>
+                            <td>'json'</td>
+                            <td>数据库类型:'json'或'jsonp'</td>
                         </tr>
                         <tr>
                             <td>provinceField</td>
