--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -217,12 +217,12 @@ $('#demo2').citys({
                         </tr>
                         <tr>
                             <td>required</td>
-                            <td>true</td>
+                            <td>false</td>
                             <td>是否必须选中(是否自动选择地区)</td>
                         </tr>
                         <tr>
                             <td>nodata</td>
-                            <td>'hidden'</td>
+                            <td>[无]</td>
                             <td>当无数据时的表现形式:'hidden'隐藏,'disabled'禁用,为空不做任何处理</td>
                         </tr>
                         <tr>
