--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -222,7 +222,7 @@ $('#demo2').citys({
                         </tr>
                         <tr>
                             <td>nodata</td>
-                            <td>[无]</td>
+                            <td>'hidden'</td>
                             <td>当无数据时的表现形式:'hidden'隐藏,'disabled'禁用,为空不做任何处理</td>
                         </tr>
                         <tr>
