--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -79,6 +79,11 @@ $('#zoom li').imagezoom({
 							<td>图片外层高度</td>
 						</tr>
 						<tr>
+							<td>data</td>
+							<td>'original'</td>
+							<td>惰性加载时的图片地址源</td>
+						</tr>
+						<tr>
 							<td>resizeable</td>
 							<td>true</td>
 							<td>窗口大小改变时是否重新调整图片位置</td>
