udpated 添加一个边框调整参数

--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -79,6 +79,11 @@ $('#zoom li').imagezoom({
 							<td>图片外层高度</td>
 						</tr>
 						<tr>
+							<td>borderWidth</td>
+							<td>0</td>
+							<td>图片边框大小</td>
+						</tr>
+						<tr>
 							<td>data</td>
 							<td>'original'</td>
 							<td>惰性加载时的图片地址源</td>
