--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -22,6 +22,9 @@
         <script type="text/javascript" src="/code/jquery.citys.js"></script>
     </head>
     <body>
+        <div class="header">
+            <a href="/">返回首页 &gt;&gt;</a>
+        </div>
         <div class="main">
             <div id="demo" class="citys">
                 <p>
