--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -23,7 +23,8 @@
     </head>
     <body>
         <div class="header">
-            <a href="/">返回首页 &gt;&gt;</a>
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
         </div>
         <div class="main">
             <div id="demo" class="citys">
