--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -15,6 +15,10 @@
 		<script type="text/javascript" src="/code/jquery.countdown.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="countdown">
 				<p>#例子1# 12:30:50到12:30:30</p>
