--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -61,6 +61,10 @@
 		<script type="text/javascript" src="/code/jquery.dialog.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<button id="btn1" class="button">打开对话框</button>
 			<div class="dialog dialog1">你确定我够帅吗？</div>
