--- a/jquery-inputFormat/index.html
+++ b/jquery-inputFormat/index.html
@@ -15,6 +15,10 @@
 		<script type="text/javascript" src="/code/jquery.inputFormat.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="input">
 				<p>货币：<input type="text" name="currency" placeholder="100,000.00"></p>
