--- a/jquery-select/index.html
+++ b/jquery-select/index.html
@@ -45,6 +45,10 @@
 		<script type="text/javascript" src="/code/jquery.select.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<select class="select1">
 				<option value="op1">选项一</option>
