--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -75,6 +75,10 @@
 		<script type="text/javascript" src="/code/jquery.slider-calendar.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="calendar calendar1"></div>
 			<div class="code">
