--- a/jquery-headroom/index.html
+++ b/jquery-headroom/index.html
@@ -33,6 +33,10 @@
 		<script type="text/javascript" src="/code/jquery.headroom.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="headroom">
 				<div class="head">
