--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -26,6 +26,10 @@
 		<script type="text/javascript" src="/code/jquery.imagezoom.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="panel">
 				<div class="zoom" id="zoom">
