--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -35,6 +35,10 @@
 		<script type="text/javascript" src="/code/jquery.range.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="panel">
 				<div class="range" id="range1"></div>
