--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -82,6 +82,10 @@
 		<script type="text/javascript" src="/code/jquery.slider.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="slider style1 slider1">
 				<span class="prev">&lt;</span>
