--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -44,6 +44,10 @@
 		<script type="text/javascript" src="/code/jquery.suggestion.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="search">
 				<form action="http://www.baidu.com/s" target="_blank">
