--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -100,6 +100,10 @@
 		<script type="text/javascript" src="/code/jquery.tabs.js"></script>
 	</head>
 	<body>
+		<div class="header">
+            <a href="https://github.com/mumuy/widget" target="_blank">项目地址</a>
+            <a href="/">返回首页</a>
+        </div>
 		<div class="main">
 			<div class="tabs tabs1">
 				<ul class="nav">
