--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -36,10 +36,10 @@
             </div>
             <div class="code">
                 <p>通过地区编码初始化设置</p>
-                <p>$('#demo').citys({nodata:'hidden',code:350206});</p>
+                <p>$('#demo').citys({code:350206});</p>
             </div>
             <script type="text/javascript">
-                $('#demo').citys({nodata:'hidden',code:350206});
+                $('#demo').citys({code:350206});
             </script>
             <div id="demo1" class="citys">
                 <p>
@@ -175,7 +175,7 @@ $('#demo2').citys({
                             <td>dataUrl</td>
                             <td>[数据库地址]</td>
                             <td>
-                              <p>最新数据库（2016年9月）：<a href="http://passer-by.com/data_location/list.json" target="_blank">JSON格式</a><a href="http://passer-by.com/data_location/list.jsonp" target="_blank">JSONP格式</a></p>
+                              <p>最新数据库（2016年10月）：<a href="http://passer-by.com/data_location/list.json" target="_blank">JSON格式</a><a href="http://passer-by.com/data_location/list.jsonp" target="_blank">JSONP格式</a></p>
                               <p>数据库项目：<a href="https://github.com/mumuy/data_location" target="_blank">中国行政区划（省、市、区、街道）</a></p>
                             </td>
                         </tr>
