--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/public/style/common.css">
         <style type="text/css">
             .citys{
-                margin-bottom: 25px;
+                margin-bottom: 10px;
             }
             .citys p{
                 line-height: 28px;
@@ -61,7 +61,7 @@
                     <select name="city"></select>
                     <select name="area"></select>
                 </p>
-                <p id="place">&nbsp;</p>
+                <p id="place">请选择地区</p>
             </div>
             <div class="code">
             <p>事件处理</p>
@@ -93,7 +93,6 @@ $('#demo2').citys({
                     <select name="area"></select>
                     <select name="town"></select>
                 </p>
-                <p id="place">&nbsp;</p>
             </div>
             <div class="code">
               <p>扩展显示行政区划第四级(街道)信息：</p>
