--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -186,7 +186,7 @@ $('#demo2').citys({
                             <td>'json'</td>
                             <td>
                                 <p>数据库类型:'json'或'jsonp'</p>
-                                <p class="warning">IE9-由于默认安全设置，需开启“通过域访问数据源”才能跨域访问json。若此类浏览器需跨域访问数据库，建议使用jsonp格式</p>
+                                <p class="warning">IE9-由于默认安全设置，需开启“通过域访问数据源”才能跨域访问json，建议跨域访问使用jsonp格式</p>
                             </td>
                         </tr>
                         <tr>
