--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -112,14 +112,19 @@ $('.search input[type="text"]').suggestion({
 							<td>提示框的内容class</td>
 						</tr>
 						<tr>
-							<td>activeCls</td>
-							<td>'active'</td>
-							<td>列表项选中class</td>
-						</tr>
-						<tr>
 							<td>FieldName</td>
 							<td>'word'</td>
 							<td>当前input表单项在请求接口时的字段名</td>
+						</tr>			
+						<tr>
+							<td>dynamic</td>
+							<td>true</td>
+							<td>是否需要异步请求数据</td>
+						</tr>
+						<tr>
+							<td>activeCls</td>
+							<td>'active'</td>
+							<td>列表项选中class</td>
 						</tr>
 						<tr>
 							<td>dataFormat</td>
