--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>我的组件库</title>
+		<meta name="description" content="简单实用的jQuery插件库，包含轮播（幻灯片）、标签页、弹出框、滚动条、城市三级联动等组件，极大地方便了前端开发">
+		<meta name="keywords" content="jQuery插件,javascript,前端开发,轮播,组件">
+		<meta name="author" content="木木阳,mumuy,passerby" />
 		<link rel="shortcut icon" href="/public/image/favicon.png">
 		<link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
