--- a/index.html
+++ b/index.html
@@ -124,7 +124,11 @@
 					<div class="mod-content">
 						<ul>
 							<li>
-								<p><a class="hot" href="/jquery-slider/" target="_blank">轮播</a><p>
+								<p>
+									<a class="hot" href="/jquery-slider/" target="_blank">轮播</a>
+									<span>/</span>
+									<a href="/jquery-slider/subject.html" target="_blank">全屏轮播</a>
+								<p>
 								<p>$(selector).slider(options,callback(api));</p>
 							</li>
 							<li>
