--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
 								<p><a href="/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
 							</li>
+							<li>
+								<p><a href="/jquery-emoticons/" target="_blank">聊天表情</a></p>
+								<p>$.emoticons(options,callback(api));</p>
+							</li>
 						</ul>
 					</div>
 				</div>
