--- a/jquery-emoticons/index.html
+++ b/jquery-emoticons/index.html
@@ -118,7 +118,7 @@
 			<div class="emoticons">
 				<div class="publisher">
 					<p><textarea name="content"></textarea></p>
-					<p><a class="trigger" href="javascript:;">😄</a></p>
+					<p><a class="trigger" href="javascript:;">☺</a></p>
 				</div>
 				<div style="text-align:right;"><button id="format">解析</button></div>
 				<div id="result" class="result"></div>
