--- a/jquery-emoticons/index.html
+++ b/jquery-emoticons/index.html
@@ -180,6 +180,26 @@
                             <td>表情配置的对象数组，title表示转义的文本，url表示图片名称</td>
                         </tr>
                         <tr>
+                            <td>left</td>
+                            <td>0</td>
+                            <td>表情选择框弹出位置与默认位置的水平偏移量</td>
+                        </tr>
+                        <tr>
+                            <td>top</td>
+                            <td>0</td>
+                            <td>表情选择框弹出位置与默认位置的垂直偏移量</td>
+                        </tr>
+                        <tr>
+                            <td>onShow</td>
+                            <td>[无]</td>
+                            <td>表情选择框显示时执行</td>
+                        </tr>
+                        <tr>
+                            <td>onHide</td>
+                            <td>[无]</td>
+                            <td>表情选择框隐藏时执行</td>
+                        </tr>
+                        <tr>
                             <td>onSelect</td>
                             <td>[无]</td>
                             <td>选中表情后执行</td>
