--- a/jquery-emoticons/index.html
+++ b/jquery-emoticons/index.html
@@ -45,6 +45,7 @@
 			.widget-layer{
 				position: relative;
 				width: 410px;
+				margin-top: 8px;
 				background: #fff;
 				border: 1px solid #dbdbdb;
 				border-radius: 2px;
