--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 				margin-bottom: 10px;
 				line-height: 20px;
 			}
+			.mod-content a.hot{
+				color: #cc0000;
+			}
 			.mod-content a:hover{
 				border-bottom: 1px dotted #666;
 			}
@@ -164,7 +167,11 @@
 								<p>$(selector).headroom(options);</p>
 							</li>
 							<li>
-								<p><a href="/jquery-calendar/" target="_blank">日历</a></p>
+								<p>
+									<a href="/jquery-calendar/" target="_blank">日历</a>
+									<span>/</span>
+									<a href="/jquery-calendar/" target="_blank">滑动日历(基于轮播)</a>
+								</p>
 								<p>$(selector).calendar(options);</p>
 							</li>
 							<li>
