--- a/jquery-select/index.html
+++ b/jquery-select/index.html
@@ -111,9 +111,9 @@
 							<td>下拉菜单自定义结构</td>
 						</tr>
 						<tr>
-							<td>selected</td>
+							<td>onSelect</td>
 							<td>
-								function(){}
+								function(value){}
 							</td>
 							<td>选择事件处理</td>
 						</tr>
@@ -129,7 +129,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>value()</td>
+							<td>setValue()</td>
 							<td>修改当前值</td>
 						</tr>
 					</tbody>
