--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -137,6 +137,11 @@ $('.search input[type="text"]').suggestion({
 							<td>其他与接口有关参数</td>
 						</tr>
 						<tr>
+							<td>jsonp</td>
+							<td>''</td>
+							<td>传递自定义回调函数</td>
+						</tr>
+						<tr>
 							<td>jsonpCallback</td>
 							<td>''</td>
 							<td>自定义回调函数</td>
