--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -138,7 +138,7 @@ $('.search input[type="text"]').suggestion({
 						</tr>
 						<tr>
 							<td>jsonp</td>
-							<td>''</td>
+							<td>'callback'</td>
 							<td>传递自定义回调函数</td>
 						</tr>
 						<tr>
