--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -122,6 +122,16 @@ $('#zoom li').imagezoom({
 							<td>300</td>
 							<td>鼠标悬浮时放大动画时长</td>
 						</tr>
+						<tr>
+							<td>beforeHover()</td>
+							<td>[空]</td>
+							<td>鼠标进入悬浮前触发</td>
+						</tr>
+						<tr>
+							<td>afterHover()</td>
+							<td>[空]</td>
+							<td>鼠标离开悬浮后触发</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
