--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -99,8 +99,8 @@ $('#zoom li').imagezoom({
 						</tr>
 						<tr>
 							<td>effect</td>
-							<td>'out'</td>
-							<td>图片居中方式处理</td>
+							<td>'default'</td>
+							<td>图片居中方式处理:default最大面积覆盖外框，in最大面积显示完整图片，out在不模糊的情况下最大面积覆盖外框</td>
 						</tr>
 						<tr>
 							<td>condition</td>
