--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -234,6 +234,11 @@
 							<td>自动播放时停顿的时间间隔</td>
 						</tr>
 						<tr>
+							<td>duration</td>
+							<td>500</td>
+							<td>自动播放时的动画时长</td>
+						</tr>
+						<tr>
 							<td>beforeEvent</td>
 							<td>
 								[无]
