--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -47,14 +47,14 @@
 				<p>
 <pre>
 $('#zoom li').imagezoom({
-	'hoverEvent':true
+	'hoverEffect':true
 });
 </pre>
 				</p>
 			</div>
 			<script type="text/javascript">
 				$('#zoom li').imagezoom({
-					'hoverEvent':true
+					'hoverEffect':true
 				});			
 			</script>
 			<div class="example">
@@ -108,7 +108,7 @@ $('#zoom li').imagezoom({
 							<td>默认筛选条件</td>
 						</tr>
 						<tr>
-							<td>hoverEvent</td>
+							<td>hoverEffect</td>
 							<td>false</td>
 							<td>鼠标悬浮时是否放大</td>
 						</tr>
