--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								<p>
 									<a href="/jquery-calendar/" target="_blank">日历</a>
 									<span>/</span>
-									<a href="/jquery-calendar/" target="_blank">滑动日历(基于轮播)</a>
+									<a href="/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
 								</p>
 								<p>$(selector).calendar(options);</p>
 							</li>
