--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -19,13 +19,14 @@
 				height:200px;
 				background:#fff;
 			}
-			.dialog .widget-title{
+			.dialog .widget-head{
+				position: relative;
 				height:40px;
 				padding-left:8px;
 				background:#cee1ee;
 				line-height:40px;
 			}
-			.dialog .widget-close{
+			.dialog .widget-head a{
 				position:absolute;
 				top:0;
 				right:0;
@@ -35,19 +36,19 @@
 				text-align:center;
 				cursor:pointer;
 			}
-			.dialog .widget-content{
+			.dialog .widget-body{
 				height:100px;
 				padding:10px;
 				line-height:100px;
 				text-align:center;
 			}
-			.dialog .widget-buttons{
+			.dialog .widget-foot{
 				height:40px;
 				padding:0 20px;
 				line-height:40px;
 				text-align:right;
 			}
-			.dialog .widget-buttons button{
+			.dialog .widget-foot button{
 				width:80px;
 				height:22px;
 				border:none;
