--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -40,7 +40,7 @@
                 </p>
             </div>
             <div class="code">
-                <p>根据IP地址定位：<a href="http://passer-by.com/api/#docs/ip">IP接口文档</a></p>
+                <p>根据IP地址定位：<a href="http://passer-by.com/api/#docs/ip" target="_blank">IP接口文档</a></p>
             </div>
             <script type="text/javascript">
                 if(remote_ip_info){
