--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -207,6 +207,14 @@ $('#demo2').citys({
                             </td>
                         </tr>
                         <tr>
+                            <td>crossDomain</td>
+                            <td>true</td>
+                            <td>
+                                <p>是否开启跨域</p>
+                                <p class="warning">IE9-如果设置开启跨域而实际跨域，造成请求异常</p>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>provinceField</td>
                             <td>'province'</td>
                             <td>省份(省级)字段名</td>
