--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -211,7 +211,7 @@ $('#demo2').citys({
                             <td>true</td>
                             <td>
                                 <p>是否开启跨域</p>
-                                <p class="warning">IE9-如果设置开启跨域而实际跨域，造成请求异常</p>
+                                <p class="warning">IE9-如果设置开启跨域而实际未跨域，造成请求异常</p>
                             </td>
                         </tr>
                         <tr>
